--- a/sigs.yaml
+++ b/sigs.yaml
@@ -163,9 +163,12 @@ sigs:
     - github: mattfarina
       name: Matt Farina
       company: Rancher Labs
+    - github: soltysh
+      name: Maciej Szulik
+      company: Red Hat
+    emeritus_leads:
     - github: prydonius
       name: Adnan Abdulhussein
-      company: Brex
   meetings:
   - description: Regular SIG Meeting
     day: Monday
