Adds a kube-vip channel
Hello,

A project that I maintain for HA Kubernetes clusters and LoadBalancer type services in Kubernetes, has started to get a little bit of traction. Currently I'm getting questions in channels such as `#cluster-api` or `#cluster-api-vsphere` and I think it might make things easier to have somewhere dedicated for conversations, support, feature requests and general inquiries about this topic. 

Kube-Vip page: [https://kube-vip.io](https://kube-vip.io)
Kube-Vip GitHub: [https://github.com/plunder-app/kube-vip](https://github.com/plunder-app/kube-vip)

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -181,6 +181,7 @@ channels:
   - name: kube-score
   - name: kube-spawn
   - name: kube-state-metrics
+  - name: kube-vip
   - name: kubeadm
   - name: kubeadm-cn
   - name: kubeapps
