--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3044,7 +3044,8 @@ committees:
   name: Code of Conduct
   mission_statement: >
     The Kubernetes Code of Conduct Committee (CoCC) is the body that is responsible
-    for enforcing and maintaining the Kubernetes Code of Conduct.
+    for enforcing and maintaining the Kubernetes Code of Conduct. Please submit private
+    incident reports to the conduct@kubernetes.io mailing list.
 
   charter_link: charter.md
   label: code-of-conduct
