Add devops-stack channel

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -25,6 +25,7 @@ channels:
   - name: bindings-discuss
   - name: bootkube
   - name: brigade
+  - name: camptocamp-devops-stack
   - name: cdk
   - name: cert-manager
   - name: cert-manager-dev
