Add #ko-project to channels.yaml
Ko is a tool for building Go container images, and deploying them to Kubernetes: https://github.com/google/ko

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -157,6 +157,7 @@ channels:
   - name: kcli
   - name: klog
   - name: knative
+  - name: ko-project
   - name: kompose
   - name: kong
   - name: konveyor
