added undistro slack channel
Signed-off-by: Felipe Oliveira <fpo@felipeweb.dev>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -389,9 +389,11 @@ channels:
   - name: ug-big-data
     id: C0ELB338T
   - name: ug-vmware
+  - name: undistro
   - name: velero-dev
   - name: velero-users
     id: C6VCGP4MT
+  - name: velero
   - name: virtlet
   - name: virtual-kubelet
   - name: virtualization
