Add Tabitha to PSC usergroup

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -53,6 +53,7 @@ usergroups:
       - micahhausler
       - swamymsft
       - tallclair
+      - tabbysable
 
   - name: velero-maintainers
     long_name: Velero Maintainers
