Slack: add new memebers of contrib-comms
- Adds users to users.yaml
- Includes users in usergroups.yaml

Signed-off-by: Matthew Broberg <matt@opensource.com>

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -35,6 +35,12 @@ usergroups:
       - Tunde
       - kaslin
       - rajula96reddy
+      - "Sladyn Nunes"
+      - "Kunal Kushwaha"
+      - "Bart Farrell"
+      - pensu91 
+      - "Joel Barker"
+      - Jason
 
   # Should match the membership of the following teams at all times:
   # - https://git.k8s.io/security/#product-security-committee-psc
