--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -12,6 +12,7 @@ users:
   ashish-amarnath: U65JLLS0J
   asmacdo: UNVH7RY9J
   bai: U4XAULHL3
+  Bart Farrell: U01DZM7PJDT
   briandealwis: UAZKM38JV
   bubblemelon: U7K9C643G
   calebamiles: U1ZDD4CUR
@@ -47,22 +48,25 @@ users:
   idvoretskyi: U0CBHE6GM
   ilya-zuyev: U018UF2G42F
   IsaacPD: U01B0C1R9NZ
+  Jason: UB272379N
   jberkhahn: U7Q21LH2S
   jdumars: U0YJS6LHL
   jeefy: U5MCFK468
   jeremyrickard: U72ESU398
   jimangel: U4HSVFA5U
-  joelanford: U1R6NQD8W
   jmccormick2001: UMPLV0G0H
   jmrodri: U4KATPQ48
-  johnbelamaric: U246A1A0N
+  Joel Barker: U014AHSTBPA
+  joelanford: U1R6NQD8W
   joelsmith: U5SLG8T8F
+  johnbelamaric: U246A1A0N
   jonasrosland: U0A4G34S2
   justaugustus: U0E0E78AK
   kadel: U0DE6E8JY
   kaslin: U5ENKU0AE
   katharine: UBTBNJ6GL
   kikisdeliveryservice: U9HFFRFT2
+  Kunal Kushwaha: UQ14U3NAY
   LappleApple: U011C07244F
   liggitt: U0BGPQ6DS
   listx: UFCU8S8P3
@@ -103,6 +107,7 @@ users:
   savitharaghunathan: UC8U2V3BM
   sethmccombs: U92LLUZ8A
   simplytunde: UAY1NBYHE
+  Sladyn Nunes: UQ9J177Q8
   Sujay Pillai: UBW3N1VGW
   sumitranr: UCQN13L9H
   swamymsft: UHU7ZNXH8
@@ -118,5 +123,5 @@ users:
   Verolop: U7NNE57PU
   vladimirmukhin: UHVSCSD4G
   wurbanski: URX7CMK97
-  zubron: U7G0KNS86
   xmudrii: U4Q2TNGVD
+  zubron: U7G0KNS86
