Add slack channel #ephemeralcontainers
Ephemeral containers is a project sponsored by sig-node. Several people
have volunteered to contribute, and I'd like to have a channel to
communicate progress and coordinate contributions.

Ephemeral containers is [KEP-277](https://features.k8s.io/277)

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -81,6 +81,7 @@ channels:
     archived: true
   - name: emea-dev
   - name: emea-users
+  - name: ephemeralcontainers
   - name: es-users
   - name: etcd
   - name: etcdadm
