--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -7,6 +7,7 @@ users:
   AlexB138: U3JA3MDGV
   alisondy: U9CBCBLCV
   ameukam: U68KPQ448
+  annajung: U8SLB1P2Q
   ankeesler: UBAA1KQ4A
   aravindputrevu: U1G27SDU6
   ashish-amarnath: U65JLLS0J
@@ -31,8 +32,10 @@ users:
   derekwaynecarr: U0A69N5GQ
   dharmit: U0APPPEKE
   dims: U0Y7A2MME
+  divya-mohan0209: UV4J7K97Z
   dougm: U8GG20UE9
   enj: U2T4CVDTJ
+  erismaster: U0162FJ79LY
   estroz: UKSEANEC9
   fabianvf: UAJ3UH29F
   feiskyer: U0ASA4398
@@ -40,6 +43,7 @@ users:
   girishramnani: U9M4K75EU
   grdryn: U017628HJL8
   gsquared94: U0131C0PJBU
+  guineveresaenger: U4H2QU3DW
   hasheddan: ULLQEF30C
   hoegaarden: U7VA4RZS9
   hubertstefanski: U01941KQ2UT
