--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -126,6 +126,7 @@ users:
   varshaprasad96: UK59YP2DA
   Verolop: U7NNE57PU
   vladimirmukhin: UHVSCSD4G
+  wilsonehusin: U0100068GF2
   wurbanski: URX7CMK97
   xmudrii: U4Q2TNGVD
   zubron: U7G0KNS86
