slack/sig-release: Add Tabby to Security Release Team usergroup
Signed-off-by: Stephen Augustus <foo@auggie.dev>

--- a/communication/slack-config/sig-release/usergroups.yaml
+++ b/communication/slack-config/sig-release/usergroups.yaml
@@ -95,7 +95,6 @@ usergroups:
       - sig-release
     members:
       - cjcullen # Product Security Committee
-      - cji # Product Security Committee
       - cpanato # Release Manager
       - feiskyer # Release Manager
       - hasheddan # subproject owner / Release Manager
@@ -107,5 +106,6 @@ usergroups:
       - puerco # Release Manager
       - saschagrunert # subproject owner / Release Manager
       - swamymsft # Product Security Committee
+      - tabbysable # Product Security Committee
       - tallclair # Product Security Committee
       - xmudrii # Release Manager
