Slack Channel Addition
- Creates sig-autoscaling-api slack channel
- Fixes issue 5750

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -333,6 +333,7 @@ channels:
   - name: sig-apps
   - name: sig-auth
   - name: sig-autoscaling
+  - name: sig-autoscaling-api
   - name: sig-cli
   - name: sig-clstr-life-leads
   - name: sig-cluster-lifecycle
