slack: create new channel for nginx-ingress development and rename the existing
- create new channel to use for nginx ingress development
- rename existing ingress-nginx to be ingress-nginx-users for
support/general chat and also match other channels name.

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -126,7 +126,9 @@ channels:
   - name: in-dev
   - name: in-events
   - name: in-users
-  - name: ingress-nginx
+  - name: ingress-nginx-dev
+  - name: ingress-nginx-users
+    id: CANQGM8BA
   - name: inspektor-gadget
   - name: it-events
   - name: it-users
