Add co-chair Gaby to doc
Gaby Moreno Cesar is a co-chair of SIG Usability. Adding her to this doc.

Signed-off-by: Tasha Drew <tasha.drew@gmail.com>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2487,6 +2487,9 @@ sigs:
     - github: hpandeycodeit
       name: Himanshu Pandey
       company: VMware
+    - github: morengab
+      name: Gaby Moreno Cesar
+      company: IBM
     - github: tashimi
       name: Tasha Drew
       company: VMware
