Add #kcp-prototype Slack channel

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -152,6 +152,7 @@ channels:
     archived: true
   - name: k8spin
   - name: kapitan
+  - name: kcp-prototype
   - name: keda
   - name: keda-dev
   - name: keel
