communication/slack-config: split #headlamp into dev and users
Signed-off-by: Vincent Batts <vbatts@kinvolk.io>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -107,7 +107,9 @@ channels:
   - name: gloo
   - name: grafana-operator
   - name: haproxy-ingress
-  - name: headlamp
+  - name: headlamp-users
+    id: C01FXB5E8ER
+  - name: headlamp-dev
   - name: helm-chart-testing
   - name: helm-deprecated
     archived: true
