Update the CoC readme  and process docs
This updates wording in a few sections of our new incident-process
docs, adds a link to our new Slack channel in the README, and adds some
descriptions and a link to the incident-process doc to the README.

Signed-off-by: Aeva Black <806320+AevaOnline@users.noreply.github.com>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3120,6 +3120,7 @@ committees:
       name: Paris Pittman
   meetings: []
   contact:
+    slack: code-of-conduct
     private_mailing_list: conduct@kubernetes.io
     teams:
     - name: code-of-conduct-committee
