[WIP] allow Slack linkages for leaders

--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -2,6 +2,7 @@
 # usernames to Kubernetes Slack user IDs.
 users:
   adisky: U9YRVLTEH
+  AevaOnline: U0GHWKQ9W
   alejandrox1: U6AS37R50
   aleksandra-malinowska: U357LUPHS
   AlexB138: U3JA3MDGV
@@ -22,6 +23,7 @@ users:
   castrojo: U1W1Q6PRQ
   cblecker: U3EDWR9FV
   cdrage: U2TU9NPH9
+  celestehorgan: USF2T2W78
   cfryanr: U0188B6J42H
   chrisshort: U2YGXSD9B
   cjcullen: U0ALJAVMF
@@ -67,6 +69,7 @@ users:
   jonasrosland: U0A4G34S2
   justaugustus: U0E0E78AK
   kadel: U0DE6E8JY
+  karenhchu: U0HMJ19U0
   kaslin: U5ENKU0AE
   katharine: UBTBNJ6GL
   kikisdeliveryservice: U9HFFRFT2
@@ -117,6 +120,7 @@ users:
   swamymsft: UHU7ZNXH8
   tabbysable: U01742MGBRT
   tallclair: U64VCBURE
+  tashimi: U98L57XTL
   TaoBeier: UCLDV6MN1
   tejal29: UACD7R316
   theishshah: U01891A4TRS
