--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3009,6 +3009,9 @@ workinggroups:
   contact:
     slack: wg-structured-logging
     mailing_list: https://groups.google.com/forum/#!forum/kubernetes-wg-structured-logging
+    liaison:
+      github: dims
+      name: Davanum Srinivas
 usergroups:
 - dir: ug-big-data
   name: Big Data
