--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2987,6 +2987,7 @@ workinggroups:
     Modernize logging in Kubernetes core components, allowing users to efficiently
     consume, process, store and analyse information stored in logs.
 
+  charter_link: charter.md
   stakeholder_sigs:
   - API Machinery
   - Architecture
