--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3009,7 +3009,15 @@ workinggroups:
     - github: shubheksha
       name: Shubheksha Jalan
       company: Apple
-  meetings: []
+  meetings:
+  - description: Regular Meeting
+    day: Thursday
+    time: "15:00"
+    tz: UTC
+    frequency: biweekly
+    url: https://zoom.us/j/96716142646?pwd=VmgrN29sbmhDREp3R0NtZlpGSlZ4Zz09
+    archive_url: https://docs.google.com/document/d/1R9bZ34L9vR1ftH0dFeOp-j50lLh5ijKVwwXJ3LDrY4I/edit?usp=sharing
+    recordings_url: https://www.youtube.com/playlist?list=PL69nYSiGNLP2GY3so1z2Cnkvkt5A_x1Aw
   contact:
     slack: wg-structured-logging
     mailing_list: https://groups.google.com/forum/#!forum/kubernetes-wg-structured-logging
