slack(releng): Offboard Marky, Pengfei, and Yang / onboard Nabarun and Joyce
Signed-off-by: Stephen Augustus <foo@auggie.dev>

--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -120,6 +120,7 @@ users:
   TaoBeier: UCLDV6MN1
   tejal29: UACD7R316
   theishshah: U01891A4TRS
+  thejoycekung: U01AY4VHX25
   tpepper: U6UB5V4TX
   tstromberg: UCSL5SJ8Z
   Tunde: UAY977ENN
