--- a/communication/slack-config/sig-release/usergroups.yaml
+++ b/communication/slack-config/sig-release/usergroups.yaml
@@ -16,17 +16,16 @@ usergroups:
     members:
       - ameukam # Release Manager Associate
       - cpanato # Release Manager
-      - feiskyer # Release Manager
       - hasheddan # subproject owner / Release Manager
-      - idealhack # Release Manager
       - jimangel # Release Manager Associate
       - justaugustus # subproject owner / Release Manager
-      - markyjackson-taulia # Release Manager Associate
       - mkorbi # Release Manager Associate
       - onlydole # Release Manager Associate
+      - palnabarun # Release Manager Associate
       - puerco # Release Manager
       - saschagrunert # subproject owner / Release Manager
       - sethmccombs # Release Manager Associate
+      - thejoycekung # Release Manager Associate
       - Verolop # Release Manager Associate
       - wilsonehusin # Release Manager Associate
       - xmudrii # Release Manager
@@ -95,9 +94,7 @@ usergroups:
     members:
       - cjcullen # Product Security Committee
       - cpanato # Release Manager
-      - feiskyer # Release Manager
       - hasheddan # subproject owner / Release Manager
-      - idealhack # Release Manager
       - joelsmith # Product Security Committee
       - justaugustus # subproject owner / Release Manager
       - lukehinds # Product Security Committee
