--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1860,12 +1860,18 @@ sigs:
       name: Sascha Grunert
       company: Red Hat
     tech_leads:
+    - github: cpanato
+      name: Carlos Tadeu Panato Jr.
+      company: Mattermost
     - github: hasheddan
       name: Daniel Mangum
       company: Upbound
     - github: jeremyrickard
       name: Jeremy Rickard
       company: Apple
+    - github: puerco
+      name: Adolfo García Veytia
+      company: uServers
     emeritus_leads:
     - github: alejandrox1
       name: Jorge Alarcon Ochoa
