Update members of the Velero Group
Add jiangd and yinw to the Velero group.
Remove nrb, calisia, ashish-amarnath.

Signed-off-by: Daniel Jiang <jiangd@vmware.com>

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -71,10 +71,9 @@ usergroups:
       # - velero-dev
       - velero-users
     members:
-      - ashish-amarnath
-      - carlisia
       - Dave Smith-Uchida
-      - nrb
+      - jiangd
+      - yinw
       - zubron
 
   - name: youtube-admins
