update odo-devs group

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -154,7 +154,6 @@ usergroups:
     channels:
       - odo
     members:
-      - adisky
       - cdrage
       - dharmit
       - girishramnani
@@ -162,6 +161,9 @@ usergroups:
       - mik-dass
       - prietyc123
       - kadel
+      - feloy
+      - anandrkskd
+      - rnapoles-rh
 
   - name: pinniped-dev
     long_name: Pinniped Development Team
