add GitHub username to Slack mappings for feloy,rnapoles-rh,anandrkskda

--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -7,6 +7,7 @@ users:
   AlexB138: U3JA3MDGV
   alisondy: U9CBCBLCV
   ameukam: U68KPQ448
+  anandrkskd: U01DRS3V0R2
   ankeesler: UBAA1KQ4A
   annajung: U8SLB1P2Q
   aravindputrevu: U1G27SDU6
@@ -37,6 +38,7 @@ users:
   estroz: UKSEANEC9
   fabianvf: UAJ3UH29F
   feiskyer: U0ASA4398
+  feloy: UFG7CN85U
   gianarb: U0FSCELCR
   girishramnani: U9M4K75EU
   grdryn: U017628HJL8
@@ -103,6 +105,7 @@ users:
   rajula96reddy: U7K9EK1HC
   rashmigottipati: U013T1DD3PW
   Rin Oliver: USF4LMDCN
+  rnapoles-rh: U01KDAMSWJD
   robshelly: U01LL4P09SR
   sammy: U8NJFL023
   saschagrunert: U53SUDBD4
