add meshery channel
Signed-off-by: Navendu Pottekkat <navendupottekkat@gmail.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -266,6 +266,7 @@ channels:
   - name: meetup-toulouse
   - name: meetup-trondheim
   - name: meetup-tunisia
+  - name: meshery
   - name: metacontroller
   - name: metal-stack
   - name: metallb
