--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -133,3 +133,6 @@ users:
   xmudrii: U4Q2TNGVD
   yinw: WAAPAQ1R8
   zubron: U7G0KNS86
+  naadir: D6SJC6KK9
+  sedefsavas: D01FZEPA2PL
+  richcase: D017X07D5M5
