Updating mattfarina to emeritus
Signed-off-by: Matt Farina <matt.farina@suse.com>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -164,6 +164,8 @@ sigs:
       name: Maciej Szulik
       company: Red Hat
     emeritus_leads:
+    - github: mattfarina
+      name: Matt Farina
     - github: prydonius
       name: Adnan Abdulhussein
   meetings:
