Add slack channel for Krator sandbox project.

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -178,6 +178,7 @@ channels:
   - name: kr-users
   - name: kraken
   - name: krane
+  - name: krator
   - name: krew
   - name: krex
   - name: krustlet
