sig-testing: make chair/tech_lead explicit

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2373,6 +2373,16 @@ sigs:
     - github: stevekuznetsov
       name: Steve Kuznetsov
       company: Red Hat
+    tech_leads:
+    - github: BenTheElder
+      name: Benjamin Elder
+      company: Google
+    - github: spiffxp
+      name: Aaron Crickenberger
+      company: Google
+    - github: stevekuznetsov
+      name: Steve Kuznetsov
+      company: Red Hat
     emeritus_leads:
     - github: fejta
       name: Erick Fejta
