--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2548,8 +2548,8 @@ sigs:
     day: Tuesday
     time: "9:00"
     tz: PT (Pacific Time)
-    frequency: every third week
-    url: https://zoom.us/j/3832562240
+    frequency: first Tuesday
+    url: https://zoom.us/my/sigusability
     archive_url: https://docs.google.com/document/d/1gJHgt8RpH4TvqPuC8NtR31-CMqtTYkHy_loxubHq8lg/
     recordings_url: https://www.youtube.com/playlist?list=PL69nYSiGNLP0eY-U8DVJWHBwKvMDEtOxx
   contact:
