Slack: Archive bootkube channel

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -24,6 +24,7 @@ channels:
   - name: bazel
   - name: bindings-discuss
   - name: bootkube
+    archived: true
   - name: brigade
   - name: camptocamp-devops-stack
   - name: cdk
