--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -419,6 +419,7 @@ channels:
   - name: wg-data-protection
   - name: wg-iot-edge
   - name: sig-k8s-infra
+    id: CCK68P2Q2
   - name: wg-lts
     archived: true
   - name: wg-machine-learning
