--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1779,6 +1779,13 @@ sigs:
       name: Derek Carr
       company: Red Hat
   meetings:
+  - description: APAC friendly CI/Triage Meeting
+    day: Second Thursday
+    time: "8:00"
+    tz: PT (Pacific Time)
+    frequency: monthly
+    url: https://zoom.us/j/4799874685
+    archive_url: https://docs.google.com/document/d/1fb-ugvgdSVIkkuJ388_nhp2pBTy_4HEVg5848Xy7n5U/edit
   - description: Regular SIG Meeting
     day: Tuesday
     time: "10:00"
