--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1779,7 +1779,7 @@ sigs:
       name: Derek Carr
       company: Red Hat
   meetings:
-  - description: Regular SIG Meeting
+  - description: Main SIG Meeting
     day: Tuesday
     time: "10:00"
     tz: PT (Pacific Time)
@@ -1787,11 +1787,18 @@ sigs:
     url: https://zoom.us/j/4799874685
     archive_url: https://docs.google.com/document/d/1Ne57gvidMEWXR70OxxnRkYquAoMpt56o75oZtg-OeBg/edit?usp=sharing
     recordings_url: https://www.youtube.com/playlist?list=PL69nYSiGNLP1wJPj5DYWXjiArF-MJ5fNG
+  - description: Monthly Alternate Time CI/Triage Meeting
+    day: second Thursday
+    time: "08:00"
+    tz: PT (Pacific Time)
+    frequency: monthly
+    url: https://zoom.us/j/4799874685
+    archive_url: https://docs.google.com/document/d/1fb-ugvgdSVIkkuJ388_nhp2pBTy_4HEVg5848Xy7n5U/edit
   - description: Weekly CI/Triage Meeting
     day: Wednesday
     time: "10:00"
     tz: PT (Pacific Time)
-    frequency: weekly
+    frequency: weekly - excluding 2nd week of the month
     url: https://zoom.us/j/4799874685
     archive_url: https://docs.google.com/document/d/1fb-ugvgdSVIkkuJ388_nhp2pBTy_4HEVg5848Xy7n5U/edit
   contact:
