--- a/communication/slack-config/sig-release/config.yaml
+++ b/communication/slack-config/sig-release/config.yaml
@@ -4,6 +4,7 @@ channels:
   - name: release-ci-signal
   - name: release-comms
   - name: release-docs
+  - name: release-enhancements
   - name: release-management
     id: CJH2GBF7Y
   - name: release-notes
