sig-release: Minor link/comment cleanups
Signed-off-by: Stephen Augustus <foo@auggie.dev>

--- a/communication/slack-config/sig-release/usergroups.yaml
+++ b/communication/slack-config/sig-release/usergroups.yaml
@@ -2,8 +2,8 @@
 
 usergroups:
   # Should match the membership of the following teams at all times:
-  # - https://git.k8s.io/sig-release/release-managers.md#release-managers
-  # - https://git.k8s.io/sig-release/release-managers.md#associates
+  # - https://kubernetes.io/releases/release-managers/#release-managers
+  # - https://kubernetes.io/releases/release-managers/#release-managers-associates
   - name: release-managers
     long_name: Release Managers
     description: >-
@@ -46,13 +46,14 @@ usergroups:
       - release-ci-signal
       - release-comms
       - release-docs
+      - release-enhancements
       - release-management
       - release-notes
       - sig-release
     members:
       - cpanato # SIG Release Technical Lead
       - JamesLaverack # 1.23 Release Team Lead Shadow
-      - jeremyrickard # SIG Release Technical Lead /  1.23 Release Team EA
+      - jeremyrickard # SIG Release Technical Lead / 1.23 Release Team EA
       - jrsapi # 1.23 Release Team Lead Shadow
       - justaugustus # SIG Release Chair
       - LappleApple # SIG Release Program Manager
@@ -82,7 +83,7 @@ usergroups:
 
   # Should match the membership of the following teams at all times:
   # - https://git.k8s.io/security/#product-security-committee-psc
-  # - https://git.k8s.io/sig-release/release-managers.md#release-managers
+  # - https://kubernetes.io/releases/release-managers/#release-managers
   - name: security-rel-team
     long_name: Security Release Team
     description: >-
