--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3150,22 +3150,24 @@ committees:
   label: code-of-conduct
   leadership:
     chairs:
-    - github: AevaOnline
-      name: Aeva Black
-      company: Microsoft
     - github: celestehorgan
       name: Celeste Horgan
       company: CNCF
     - github: karenhchu
       name: Karen Chu
       company: Microsoft
-    - github: tashimi
-      name: Tasha Drew
+    - github: palnabarun
+      name: Nabarun Pal
       company: VMware
     - github: tpepper
       name: Tim Pepper
       company: VMware
+    - github: vllry
+      name: Vallery Lancey
+      company: Apple
     emeritus_leads:
+    - github: AevaOnline
+      name: Aeva Black
     - github: Bradamant3
       name: Jennifer Rondeau
     - github: carolynvs
@@ -3174,6 +3176,8 @@ committees:
       name: Jaice Singer DuMars
     - github: parispittman
       name: Paris Pittman
+    - github: tashimi
+      name: Tasha Drew
   meetings: []
   contact:
     slack: code-of-conduct
