--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -151,6 +151,7 @@ channels:
   - name: kalm
   - name: kaniko
   - name: k8s-dual-stack
+    archived: true
   - name: k8s-infra-alerts
   - name: k8s-release
     archived: true
