--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -418,7 +418,8 @@ channels:
   - name: wg-component-standard-mentorship
   - name: wg-data-protection
   - name: wg-iot-edge
-  - name: wg-k8s-infra
+  - name: sig-k8s-infra
+    id: CCK68P2Q2
   - name: wg-lts
     archived: true
   - name: wg-machine-learning
