--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -213,6 +213,7 @@ channels:
   - name: kuberhealthy
   - name: kubernetes-arm
   - name: kubernetes-batch-jobs
+    archived: true
   - name: kubernetes-careers
   - name: kubernetes-client
   - name: kubernetes-contributors
