add chile channel to slack config

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -34,6 +34,7 @@ channels:
   - name: chartcenter
   - name: chartmuseum
   - name: charts
+  - name: chile
   - name: cka-exam-prep
   - name: ckad-exam-prep
   - name: cks-exam-prep
