Add capi-ibmcloud channel

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -49,6 +49,7 @@ channels:
   - name: cluster-api-docker
     archived: true
   - name: cluster-api-gcp
+  - name: cluster-api-ibmcloud
   - name: cluster-api-kubevirt
   - name: cluster-api-nested
   - name: cluster-api-openstack
