--- a/events/elections/2021/voters.yaml
+++ b/events/elections/2021/voters.yaml
@@ -6,7 +6,7 @@
 #
 # If you feel you meet the eligibility criteria but do not see your GitHub username
 # below, please fill out an exception request and the elections team will get back to
-# you as quickly as possible: LINK TBD
+# you as quickly as possible: https://elections.k8s.io/app/elections/2021/exception
 #
 # History:
 # 2021-09-21: Initial voter list prepared using devstats data provided Lukasz Gryglicki
