--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2455,12 +2455,12 @@ sigs:
     - github: BenTheElder
       name: Benjamin Elder
       company: Google
-    - github: spiffxp
-      name: Aaron Crickenberger
-      company: Google
-    - github: stevekuznetsov
-      name: Steve Kuznetsov
+    - github: alvaroaleman
+      name: Alvaro Aleman
       company: Red Hat
+    - github: cjwagner
+      name: Cole Wagner
+      company: Google
     emeritus_leads:
     - github: fejta
       name: Erick Fejta
