Add new channel to Slack workspace
Signed-off-by: David Espejo <daespejo@vmware.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -27,6 +27,7 @@ channels:
     archived: true
   - name: brigade
   - name: camptocamp-devops-stack
+  - name: cartographer
   - name: cdk
   - name: cert-manager
   - name: cert-manager-aws-privateca-issuer
