--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1630,7 +1630,7 @@ sigs:
       company: Google
     - github: pmorie
       name: Paul Morie
-      company: Red Hat
+      company: Apple
     emeritus_leads:
     - github: quinton-hoole
       name: Quinton Hoole
