slack: add channel cluster-api-kubemark

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -51,6 +51,7 @@ channels:
     archived: true
   - name: cluster-api-gcp
   - name: cluster-api-ibmcloud
+  - name: cluster-api-kubemark
   - name: cluster-api-kubevirt
   - name: cluster-api-nested
   - name: cluster-api-openstack
