--- a/events/elections/2021/voters.yaml
+++ b/events/elections/2021/voters.yaml
@@ -12,6 +12,7 @@
 # 2021-09-21: Initial voter list prepared using devstats data provided Lukasz Gryglicki
 #   and current organization membership status.
 # 2021-09-29: Deduplicate redundant entries from people with multiple devstats records.
+# 2021-09-30: Adding from exception requests.
 #
 
 eligible_voters:
@@ -259,6 +260,7 @@ eligible_voters:
 - hwdef
 - iamemilio
 - iamNoah1
+- IanColdwater
 - ibabou
 - Iceber
 - idvoretskyi
