Archive abandoned channel #community-sites per discussion
Signed-off-by: Josh Berkus <josh@agliodbs.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -61,6 +61,7 @@ channels:
   - name: cn-users
   - name: code-of-conduct
   - name: community-sites
+    archived: true
   - name: compliance-hipaa
   - name: contour
   - name: contributor-summit
