--- a/sigs.yaml
+++ b/sigs.yaml
@@ -624,6 +624,9 @@ sigs:
   label: cli
   leadership:
     chairs:
+    - github: KnVerey
+      name: Katrina Verey
+      company: Apple
     - github: eddiezane
       name: Eddie Zaneski
       company: Amazon
@@ -634,8 +637,8 @@ sigs:
       name: Maciej Szulik
       company: Red Hat
     tech_leads:
-    - github: pwittrock
-      name: Phillip Wittrock
+    - github: KnVerey
+      name: Katrina Verey
       company: Apple
     - github: soltysh
       name: Maciej Szulik
@@ -645,6 +648,8 @@ sigs:
       name: Tony Ado
     - github: fabianofranz
       name: Fabiano Franz
+    - github: pwittrock
+      name: Phillip Wittrock
   meetings:
   - description: Bug Scrub
     day: Wednesday
