Update channels.yaml (#6109)
* Update channels.yaml

Add channel for Tanzu Community Edition

* Update channels.yaml

Fixed ordering of addition

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -392,6 +392,7 @@ channels:
   - name: summit-staff
   - name: suse-caasp
   - name: talk-proposals
+  - name: tanzu-community-edition
   - name: terraform-providers
   - name: test-failures
   - name: tilt
