--- a/events/elections/2021/voters.yaml
+++ b/events/elections/2021/voters.yaml
@@ -13,6 +13,7 @@
 #   and current organization membership status.
 # 2021-09-29: Deduplicate redundant entries from people with multiple devstats records.
 # 2021-09-30: Adding from exception requests.
+# 2021-10-10: Adding from exception requests.
 #
 
 eligible_voters:
@@ -635,6 +636,7 @@ eligible_voters:
 - verb
 - verult
 - vinayakankugoyal
+- vinaykul
 - vincepri
 - vivekbagade
 - vladimirvivien
