Update SIG Multicluster Meeting Cadence
SIG Multicluster meets bi-weekly, not every week.

ref: https://kubernetes.slack.com/archives/C09R1PJR3/p1632847387048500?thread_ts=1632846819.048400&cid=C09R1PJR3

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1653,7 +1653,7 @@ sigs:
     day: Tuesday
     time: "9:30"
     tz: PT (Pacific Time)
-    frequency: weekly
+    frequency: bi-weekly
     url: https://zoom.us/my/k8s.mc
     archive_url: https://tinyurl.com/sig-multicluster-notes
     recordings_url: https://www.youtube.com/playlist?list=PL69nYSiGNLP0HqgyqTby6HlDEz7i1mb0-
