wg-structured-logging: update organizers
Shubheksha agreed to step down due to time constraints (confirmed on Slack). I
can take over.

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2990,12 +2990,12 @@ workinggroups:
   label: structured-logging
   leadership:
     chairs:
+    - github: pohly
+      name: Patrick Ohly
+      company: Intel
     - github: serathius
       name: Marek Siarkowicz
       company: Google
-    - github: shubheksha
-      name: Shubheksha Jalan
-      company: Apple
   meetings:
   - description: Regular Meeting
     day: Thursday
