Adding voters from exception requests.

--- a/events/elections/2021/voters.yaml
+++ b/events/elections/2021/voters.yaml
@@ -15,6 +15,7 @@
 # 2021-09-30: Adding from exception requests.
 # 2021-10-10: Adding from exception requests.
 # 2021-10-16: Adding from exception requests.
+# 2021-10-19: Adding from exception requests.
 #
 
 eligible_voters:
@@ -156,6 +157,7 @@ eligible_voters:
 - danehans
 - DangerOnTheRanger
 - Danil-Grigorev
+- danpopSD
 - danwinship
 - dashpole
 - dcbw
@@ -185,6 +187,7 @@ eligible_voters:
 - drubin
 - dthorsen
 - dvonthenen
+- DylanGraham
 - eddiezane
 - eddycharly
 - edreed
@@ -235,6 +238,7 @@ eligible_voters:
 - gnufied
 - gochist
 - gracenng
+- guineveresaenger
 - gyliu513
 - habibrosyad
 - haircommander
@@ -290,6 +294,7 @@ eligible_voters:
 - jberkus
 - jcjesus
 - jdef
+- jdumars
 - jeefy
 - Jefftree
 - jeffvance
@@ -463,6 +468,7 @@ eligible_voters:
 - ncdc
 - nckturner
 - nearora-msft
+- nehaLohia27
 - neolit123
 - nicolehanjing
 - nikhita
@@ -538,6 +544,7 @@ eligible_voters:
 - rjbez17
 - RobertKielty
 - robscott
+- rothgar
 - roycaihw
 - rphillips
 - rrati
